--- a/404.html
+++ b/404.html
@@ -5341,7 +5341,7 @@ test404
         
     urlD.map( function(a){
              console.log(a);
-            if (redirects.indexOf(a)!= -1 )window.location.href = 'http://www.thegovlab.org/'+redirectURL; return
+            if (redirects.indexOf(a)!= -1 )window.location.href = 'http://www.thegovlab.org/'+a; return
              
     })    
   
