--- a/404.html
+++ b/404.html
@@ -5341,7 +5341,7 @@ test404
         
     urlD.map( function(a){
               a.split('?');
-            if (redirects.indexOf(a[0])!= -1 )window.location.href = 'http://www.thegovlab.org/'+a; return
+            if (redirects.indexOf(a[0])!= -1 )window.location.href = 'http://www.thegovlab.org/'+a[0]; return
              
     })    
   
