--- a/404.html
+++ b/404.html
@@ -5341,9 +5341,9 @@ console.log(matchedArray);
 "mental-geography-wonky-maps-and-a-long-way-ahead",
 "surfing-logs-reveal-global-eating-patterns"];
         
-    urlD.map( function(a){
-              a.match(/.*?[?!.]/g);
-            console.log(a)
+    urlD.map( function(ab){
+              const maA = ab.match(/.*?[?!.]/g);
+            console.log(maA)
             if (redirects.indexOf(a[0])!= -1 )window.location.href = 'http://www.thegovlab.org/'+a[0]; return
              
     })    
