--- a/404.html
+++ b/404.html
@@ -5344,7 +5344,7 @@ console.log(matchedArray);
     urlD.map( function(ab){
               const maA = ab.match(/.*?[?!.]/g);
             console.log(maA)
-            if (redirects.indexOf(a[0])!= -1 )window.location.href = 'http://www.thegovlab.org/'+a[0]; return
+            if (redirects.indexOf(maA[0])!= -1 )window.location.href = 'http://www.thegovlab.org/'+maA[0]; return
              
     })    
   
