--- a/404.html
+++ b/404.html
@@ -5337,6 +5337,7 @@ test404
 "mental-geography-wonky-maps-and-a-long-way-ahead",
 "surfing-logs-reveal-global-eating-patterns"];
         
+    var urlD = window.location.href.split("/");
     urlD.map( function(ab){
             if (redirects.indexOf(ab)!= -1 )window.location.href = 'http://www.thegovlab.org/'+ab; return
              
