--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ test404
 
   <script>
 
-    var redirects = 
+    var redirects =
         ["reach-is-crowdsourcing-street-criminal-incidents-to-reduce-crime-in-lima",
 "whats-inside-the-black-box-of-digital-innovation",
 "technologies-of-international-relations",
@@ -5336,12 +5336,13 @@ test404
 "the-govlab",
 "mental-geography-wonky-maps-and-a-long-way-ahead",
 "surfing-logs-reveal-global-eating-patterns"];
-        
-    var urlD = window.location.href.replace(/\?/g, "/"); 
-    urlD.split("/");
-    urlD.map( function(ab){
+
+    var urlD = window.location.href.replace(/\?/g, "/");
+    var urlAr = urlD.split("/");
+    urlAr.map( function(ab){
+          console.log(ab);
             if (redirects.indexOf(ab)!= -1 )window.location.href = 'http://www.thegovlab.org/'+ab; return
-             
-    })    
-  
+
+    })
+
   </script>
