--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 test404
 <br>
 <br>
-404? Try one of these redirects 
-<select id="linklist" onchange="window.location.href = 'http://www.thegovlab.org/'+this.options[this.selectedIndex].value"></select>
+404? Try one of these redirects
+<select id="linklist" onchange="window.location.href = 'https://govlab.github.io/dev.thegovlab.org/'+this.options[this.selectedIndex].value"></select>
 
   <script>
 
