--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@ test404
 
   <script>
 
-redirects = [
+var redirects = [
 "want-to-make-your-vote-really-count-stick-a-blockchain-on-it",
 "how-are-italian-companies-embracing-open-data-2",
 "plato-and-the-nerd-the-creative-partnership-of-humans-and-technology",
