--- a/preview/index.html
+++ b/preview/index.html
@@ -5,12 +5,13 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://www.thegovlab.org/static/img/govlab-og.png">
     <meta content="The GovLab" property="og:site_name">
+    <script async="" src="//www.google-analytics.com/analytics.js"></script>
     <script src="//use.typekit.net/zez3buj.js"></script>
     <style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><style type="text/css">@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff2"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("opentype");font-weight:100;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff2"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("opentype");font-weight:100;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff2"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("opentype");font-weight:600;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff2"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("opentype");font-weight:600;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff2"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("opentype");font-weight:400;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff2"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("opentype");font-weight:300;font-style:normal;}</style><script>try{Typekit.load();}catch(e){}</script>
     <link href="static/img/favicon-transparent.png" rel="shortcut icon">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
@@ -118,32 +119,18 @@
     </nav>
 
 
-<div class="b-events" id="events" v-cloak>
+<div class="b-events" id="preview_blog" v-cloak>
     <div class="e-team-list">
-        <h1 v-if='eventsData[0].from >= currentDate'>Upcoming Events</h1>
-        <div class="e-team-member" v-for="event in eventsData" :id="event.slug" v-if="event.status =='published' && event.from >= currentDate">
+        <div class="e-team-member" v-if="postdata.status =='draft'">
             <div class="e-wrap">
                 <div class="e-bio">
-                  <a v-if="event.link" :href="event.link" target="_blank">  <h3>{{event.title}}</h3></a>
-                    <h4 v-if='event.from == event.till'><span class="material-icons">insert_invitation</span>{{dateShow(event.from)}}</h4>
-                    <h4 v-if='event.from != event.till'><span class="material-icons">insert_invitation</span>{{dateShow(event.from)}} - {{dateShow(event.till)}}</h4>
+                    <h3>{{postdata.title}}</h3></a>
+                    <h4 ><span class="material-icons">insert_invitation</span>Published {{postdata.created_on}}</h4>
 
-                    <div v-if="!event.extended" v-html="event.desc_short"></div>
-                    <div v-if="event.extended && event.description" v-html="event.description"></div>
-                    <button v-if="!event.extended && event.description" @click="showDesc(event)">READ MORE</button>
-                    <button v-if="event.extended" @click="showExc(event)">READ LESS</button> <button v-if="event.link" @click="eventMore(event.link)">RSVP NOW!</button>
-                </div>
-            </div>
-        </div>
-        <h1>Past Events</h1>
-        <div class="e-team-member" v-for="event in eventsData" :id="event.slug" v-if="event.status =='published' && event.till < currentDate">
-            <div class="e-wrap">
-                <div class="e-bio">
-                  <a v-if="event.link" :href="event.link" target="_blank">  <h3>{{event.title}}</h3></a>
-                    <h4 v-if='event.from == event.till'><span class="material-icons">insert_invitation</span>{{dateShow(event.from)}}</h4>
-                    <h4 v-if='event.from != event.till'><span class="material-icons">insert_invitation</span>{{dateShow(event.from)}} - {{dateShow(event.till)}}</h4>
-                    <div v-if="!event.extended" v-html="event.desc_short"></div>
-                    <button v-if="event.link" @click="eventMore(event.link)">LEARN MORE ABOUT THIS EVENT</button>
+                    <div v-if="!postdata.extended" v-html="postdata.excerpt"></div>
+                    <div v-if="postdata.extended && postdata.content" v-html="postdata.content"></div>
+                    <button v-if="!postdata.extended && postdata.content" @click="showDesc(postdata)">READ MORE</button>
+                    <button v-if="postdata.extended" @click="showExc(postdata)">READ LESS</button>
                 </div>
             </div>
         </div>
@@ -189,7 +176,7 @@
     <div id="overlay"></div>
     <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
     <script src="https://unpkg.com/vue-meta/dist/vue-meta.min.js"></script>
-    <script src="js/events.js"></script>
+    <script src="./js/preview_blog.js"></script>
     <div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;"></iframe></div>
     <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.039c92b6.js"></script>
     <div id="feedly-mini" title="feedly Mini tookit"></div>
