--- a/404.html
+++ b/404.html
@@ -6,8 +6,7 @@ test404
 <select id="linklist" onchange="window.location.href = 'https://govlab.github.io/dev.thegovlab.org/'+this.options[this.selectedIndex].value"></select>
 
   <script>
-var redirects =
-        ["opening-government-collaborative-strategies-for-solving-the-worlds-hardest-problems",
+var redirects = ["opening-government-collaborative-strategies-for-solving-the-worlds-hardest-problems",
 "the-open-government-partnership-ogp-turns-one",
 "quotes-of-the-week",
 "online-learning-and-making-the-most-of-open-government-data",
